# qt-breakpad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: app_version.h  app_version.h.in
qtbreakpad/: qtsystemexceptionhandler.cpp
qtcrashhandler/: CMakeLists.txt  dumpsender.cpp  dumpsender.h  main.cpp  mainwidget.cpp
testapp/: main.cpp
